// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ProviderTree > should render the tree of providers 1`] = `
<div>
  <div
    id="foo"
  >
    <div
      id="bar"
    >
      <div>
        This is App
      </div>
    </div>
  </div>
</div>
`;

exports[`ProviderTree > should render the tree of providers without props 1`] = `
<div>
  <div>
    <div>
      This is App
    </div>
  </div>
</div>
`;
